ui/inspectors/share.reel/share-overview.reel/_share-overview.css
.ShareOverview {
    display: flex;
    margin-top: 0;
    padding-bottom: 1em;
    margin: -1em;
    margin-bottom: 1em;
    padding: 1em;
    border-bottom: 1px solid rgba(255,255,255,.15);
    background: #DFE4E4;
    color: #16171A;
}

.ShareOverview-iconContainer {
    text-align: center;
    width: 7.5em;
    margin-right: 1em;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.ShareOverview-icon {
    display: inline-block;
    width:  6em;
    height: 6em;
    display: flex;
}

.ShareOverview-icon svg {
    width: 100%;
    height: 100%;
}

.ShareOverview-info {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.ShareOverview-title {
    font-size: 2em;
    margin-bottom: 1rem;
    text-transform: uppercase;
}

.TargetTitle-type {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: center;
}

.TargetTitle-arrow {
    margin-left: .5em;
    display: none;
    width:  0;
    height: 0;
    border-left:    6px solid transparent;
    border-right:   6px solid transparent;
    border-top:     6px solid #929e9f;

}

.TargetTitle-type span.has-options + .TargetTitle-arrow {
    display: block;
}

.Target-types {
    display: none;
    position: absolute;
    left: 0;
    background: #232629;
    /*padding: .75em 1em;*/
    margin-left: 1em;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;
    overflow: hidden;
    box-shadow: 0 2px 2px rgba(0,0,0,.2);
    z-index: 100;
}

.Target-types a {
    display: block;
}

.Target-types.is-shown {
    display: block;
}

.TargetTypes-type {
    padding: .5em 1em;
    color: #929E9F;
    text-align: left;
}

.TargetTypes-type:hover {
    color: #fff;
    background: rgba(255,255,255,.1);
}

